force-app/main/default/objects/Portal_da_licitacao__c/Portal_da_licitacao__c.object-meta.xml
<CustomObject>
    <label>Portal da licitação</label>
    <nameField>
        <label>Nome do portal</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portais das licitações</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>