force-app/main/default/objects/Portal_da_licitacao__c/fields/Data_do_fim_do_contrato__c.field-meta.xml
<CustomField>
    <fullName>Data_do_fim_do_contrato__c</fullName>
    <label>Data do fim do contrato</label>
    <type>Date</type>
</CustomField>