force-app/main/default/objects/Portal_da_licitacao__c/fields/Link_do_portal__c.field-meta.xml
<CustomField>
    <fullName>Link_do_portal__c</fullName>
    <label>Link do portal</label>
    <type>Url</type>
</CustomField>