force-app/main/default/objects/Portal_da_licitacao__c/fields/Login__c.field-meta.xml
<CustomField>
    <fullName>Login__c</fullName>
    <label>Login</label>
    <length>255</length>
    <type>Text</type>
</CustomField>