force-app/main/default/objects/Portal_da_licitacao__c/fields/Modalidade__c.field-meta.xml
<CustomField>
    <fullName>Modalidade__c</fullName>
    <formula>if(RecordTypeId == &quot;a2f6e00000180oDAAQ&quot;, &quot;PRIVADO&quot;, &quot;PÚBLICO&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Modalidade</label>
    <type>Text</type>
</CustomField>