force-app/main/default/objects/Portal_da_licitacao__c/fields/Senha__c.field-meta.xml
<CustomField>
    <fullName>Senha__c</fullName>
    <label>Senha</label>
    <length>255</length>
    <type>Text</type>
</CustomField>