force-app/main/default/objects/Portal_da_licitacao__c/fields/Uso_em_opp__c.field-meta.xml
<CustomField>
    <fullName>Uso_em_opp__c</fullName>
    <label>Uso em opp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ATIVO</fullName>
            </value>
            <value>
                <fullName>INATIVO</fullName>
            </value>
            <value>
                <fullName>LOSS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>