force-app/main/default/objects/Portal_da_licitacao__c/fields/VALOR_DO_PORTAL__c.field-meta.xml
<CustomField>
    <fullName>VALOR_DO_PORTAL__c</fullName>
    <label>Valor do portal</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>