force-app/main/default/objects/Portal_da_licitacao__c/recordTypes/PRIVADO.recordType-meta.xml
<RecordType>
    <fullName>PRIVADO</fullName>
    <active>true</active>
    <label>PRIVADO</label>
</RecordType>