force-app/main/default/objects/Portal_da_licitacao__c/recordTypes/PUBLICO.recordType-meta.xml
<RecordType>
    <fullName>PUBLICO</fullName>
    <active>true</active>
    <label>PÚBLICO</label>
</RecordType>