force-app/main/default/objects/Portal_da_licitacao__c/listViews/Ativos.listView-meta.xml
<ListView>
    <fullName>Ativos</fullName>
    <columns>NAME</columns>
    <columns>Data_do_fim_do_contrato__c</columns>
    <columns>VALOR_DO_PORTAL__c</columns>
    <columns>Link_do_portal__c</columns>
    <columns>Login__c</columns>
    <columns>Senha__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>ATIVO</value>
    </filters>
    <label>Ativos</label>
</ListView>