force-app/main/default/objects/Portal_da_licitacao__c/listViews/Todos.listView-meta.xml
<ListView>
    <fullName>Todos</fullName>
    <columns>NAME</columns>
    <columns>Data_do_fim_do_contrato__c</columns>
    <columns>Status__c</columns>
    <columns>Link_do_portal__c</columns>
    <columns>Login__c</columns>
    <columns>Senha__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>